fix: gap values

--- a/styles/form.css
+++ b/styles/form.css
@@ -11,7 +11,7 @@ section#form-container header h1 {
 section#form-container header form {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.75rem;
 }
 
 section#form-container header form div.inputs-wrapper {
@@ -61,5 +61,5 @@ section#form-container header form button[type="submit"] {
     font-weight: bold;
     color: #FBF9FE;
     cursor: pointer;
-    margin-top: 0.25rem;
+    margin-top: 0.5rem;
 }
